added price.flexibility feature